# test-someip-service

./: .gitignore  CMakeLists.txt  README.md  vsomeip.json
commonapi-wrappers/: CMakeLists.txt  gen_wrappers.sh
franca/instances/: org.genivi.vehicle.playground.fdepl
franca/org/genivi/vehicle/: playgroundTypes.fidl
include/: MockedValues.hpp  PlaygroundStubImpl.hpp
src/: MockedValues.hpp  PlaygroundClient.cpp  PlaygroundService.cpp  PlaygroundStubImpl.cpp  PlaygroundStubImpl.hpp
src/mock/: MockedAttributes.cpp  MockedAttributes.hpp
